--- a/projects/h-tree-view/src/lib/h-treeView.component.html
+++ b/projects/h-tree-view/src/lib/h-treeView.component.html
@@ -20,7 +20,13 @@
     </div>
 
     <div class="h-treeView-item__item">
-      {{ item.label }}
+      <ng-container *ngIf="itemTemplate">
+        <ng-container *ngTemplateOutlet="itemTemplate; context: { item: item }"></ng-container>
+      </ng-container>
+
+      <ng-container *ngIf="!itemTemplate">
+        {{ item.label }}
+      </ng-container>
     </div>
   </li>
 </ng-template>
