--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0px;
+  --surface-ground: #eff3f8;
+  background-color: var(--surface-ground);
+  display: block;
+  padding: 0rem 4rem;
+}
