--- a/projects/h-tree-view/src/lib/h-treeView.component.scss
+++ b/projects/h-tree-view/src/lib/h-treeView.component.scss
@@ -17,24 +17,6 @@ cdk-virtual-scroll-viewport {
   border-radius: 4px;
   overflow: hidden;
 
-  .h-treeView {
-    color: rgba(0, 0, 0, 0.87);
-    box-sizing: border-box;
-    background: white;
-    font-size: 14px;
-
-    &:last-child {
-      border: none;
-    }
-
-    &__drag-placeholder {
-      background: #ccc;
-      border: dotted 3px #999;
-      min-height: 48px;
-      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-    }
-  }
-
   &.cdk-drop-list-dragging .h-tree-item:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
@@ -56,9 +38,19 @@ cdk-virtual-scroll-viewport {
   display: flex;
   align-items: center;
   height: 48px;
-  border-radius: 6px;
-  transition: box-shadow 0.2s;
   padding-left: calc(40px * var(--level));
+  font-size: 1rem;
+
+  &:last-child {
+    border: none;
+  }
+
+  &__drag-placeholder {
+    background: #ccc;
+    border: dotted 3px #999;
+    min-height: 48px;
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
 
   &__item {
     cursor: pointer;
