--- a/src/app/components/h-docsection/h-docsection.component.html
+++ b/src/app/components/h-docsection/h-docsection.component.html
@@ -1,3 +1,13 @@
 <div class="doc-section">
+  <div>
+    <h2>TreeView</h2>
+    <div>
+      <p>Tree is used to display hierarchical data.</p>
+      <p>We have support using virtual scroll.</p>
+    </div>
+  </div>
+
   <h-basic-doc></h-basic-doc>
+
+  <h-template-doc></h-template-doc>
 </div>
