--- a/src/app/pages/template-doc/template-doc.component.html
+++ b/src/app/pages/template-doc/template-doc.component.html
@@ -5,8 +5,8 @@
 
   <ng-container demo>
     <lib-h-treeView [items]="items">
-      <ng-template [hTreeViewTemplate]="templateEnum.Item" let-item="item">
-        <b>{{ item.label }}</b>
+      <ng-template [hTreeViewTemplate]="templateEnum.Item" let-node="node">
+        <b>{{ node.label }}</b>
       </ng-template>
     </lib-h-treeView>
   </ng-container>
